use separate then lists for each then in yaml